src/App.css
.App {
  text-align: center;
  max-width: 100%;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  font-size: 12px;
  margin: 10px 0px;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

.body, .headers, plaintext {
  padding: 5px;
  max-height: 65vh;
  min-height: 65vh;
  overflow: scroll;
  margin: auto;
}

plaintext {
  text-align: left;
}

html {
  background: rgb(30, 31, 34);
}

body {
  overflow: hidden;
  background: rgb(30, 31, 34);
  color: white;
  padding: 0px 10px;
}

*::-webkit-scrollbar {
  width: 5px;
  height: 5px;
}

*::-webkit-scrollbar-thumb {
  background-color: white;
}

*::-webkit-scrollbar-corner {
  display: none;
}

.horizontal {
  flex-direction: row;
}

